tests/baselines/reference/typeValueConflict2.errors.txt
==== tests/cases/compiler/typeValueConflict2.ts (1 errors) ====
    module M1 {
        export class A<T> {
            constructor(a: T) {
            }
        }
    }
    module M2 {
        var M1 = 0;
        // Should error.  M1 should bind to the variable, not to the module.
        class B extends M1.A<string> {
                        ~~~~~~~~~~~~
!!! typeValueConflict2.ts(10,21): error TS2186: Type name 'M1.A' in extends clause does not reference constructor function for 'M1.A<string>'.
        }
    }
    module M3 {
        // Shouldn't error
        class B extends M1.A<string> {
        }
    }
    